[package]
name = "safer-nostr"
version = "0.1.0"
edition = "2021"
description = "Safer Nostr is a service to delegate the loading of information such as PIN 05, and images (as well as their optimizations) in order to allow Nostr users to be safe"
readme = "README.md"
repository = "https://github.com/0xtlt/nostr_rust"
keywords = ["nostr", "rust", "delegate", "nip05", "image", "optimization"]
license = "MIT"
authors = ["Thomas Tastet"]

[features]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.23", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
tokio-tungstenite = { version = "0.18", features = ["handshake", "rustls-tls-webpki-roots"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive", "serde_derive"] }
nostr_rust = { version = "0.16", default-features = false, features = ["async"] }
dotenv = "0.15"
redis = { version = "0.22", features = ["tokio-comp", "tokio-native-tls-comp"]}
async-lock = "2"
thiserror = "1"
lazy_static = "1"
futures-util = "0.3.25"
form_urlencoded = "1.1"
chrono = "0.4"
secp256k1 = { version = "0.25", features = ["bitcoin_hashes", "global-context", "rand-std"] }
sha256 = "1"
hex = "0.4"
serde_json = "1.0.91"
image = "0.24"
mime_guess = "2.0.4"
select = "0.6.0"
